--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/config": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
+        "illuminate/config": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.1",
-        "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0"
+        "phpunit/phpunit": "^7.0|^8.0",
+        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0|^4.0"
     },
     "autoload": {
         "psr-4": {
